Fix body overflow on IE8
Update copyright to 2012

--- a/init/static/base.css
+++ b/init/static/base.css
@@ -215,6 +215,7 @@ body, table, tr, td, th, thead, tfoot, label, h1, h2, h3, h4, h5, h6, p, ul, li,
     font-family: inherit;
     vertical-align: baseline;
     font-size: 100%;
+    overflow: auto;
 }
 
 select {
